<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IngresoDatos">

    <EditText
        android:id="@+id/name1"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="128dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="124dp"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="number" />

    <Button
        android:id="@+id/saveit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Guardar"
        android:onClick="Guardar"
        android:text="@string/Guardar"
        tools:visibility="visible" />

    <Button
        android:id="@+id/bdeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:onClick="Atras"
        android:text="@string/back" />

    <ListView
        android:id="@+id/lista"
        android:layout_width="391dp"
        android:layout_height="449dp"
        android:layout_marginEnd="2dp" />

</LinearLayout>