<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:onClick="facebook"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="246dp"
        android:layout_height="52dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/user"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoms" />

    <EditText
        android:id="@+id/password"
        android:layout_width="246dp"
        android:layout_height="54dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="14dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="189dp"
        android:layout_height="68dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="111dp"
        android:onClick="Inicio"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="220dp"
        android:clickable="true"
        android:onClick="facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@drawable/facebook"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/instagram"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="220dp"
        android:clickable="true"
        android:onClick="instagram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@drawable/instagram"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="220dp"
        android:clickable="true"
        android:onClick="twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/github"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@drawable/twitter"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="220dp"
        android:clickable="true"
        android:onClick="reddit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/twitter"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@drawable/reddit"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/github"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="220dp"
        android:clickable="true"
        android:onClick="github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/instagram"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@drawable/github"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/logoms"
        android:layout_width="256dp"
        android:layout_height="177dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/prems" />

</androidx.constraintlayout.widget.ConstraintLayout>
